Make compatible with java11
Signed-off-by: Heng Qian <qianheng@amazon.com>